# conversational-audio-bot

./: .env.example  .gitignore  README.md  poetry.lock.old  pyproject.toml  pyproject.toml.old
app/: chatbot_gradio_runner.ipynb  chatbot_gradio_runner.py
assets/: file_map.txt
data/: audio_bot_context.txt  audio_bot_context_extended.txt  call_center_prompt_with_intents_categories_context.json  call_center_prompt_with_intents_categories_context.txt  context.txt  travel_bot_context.txt
genai_voice/: __init__.py
genai_voice/bots/: chatbot.py
genai_voice/config/: defaults.py
genai_voice/data_utils/: extract_web_data.py  urls.py
genai_voice/defintions/: model_response_formats.py  prompts.py
genai_voice/logger/: log_utils.py
genai_voice/models/: claude_sonnet.py  model_config.py  open_ai.py
genai_voice/moderation/: responses.py
genai_voice/processing/: audio.py
playground/: chatbot_streamlit_runner.py  test_ui.py
test/: sasmita.py
